# base_vo

base/: .gitignore  Cargo.toml
base/src/: lib.rs
base/src/base/: mod.rs
base/src/base/dominio/: fecha_creacion.rs  fecha_modificacion.rs  id_interno.rs  id_simple.rs  mod.rs  version.rs
base/src/base/persistencia/: crear_conexion.rs  database.rs  mod.rs
base/src/base/validadores/: mod.rs
base/src/base/validadores/base/: fecha_creacion.rs  fecha_modificacion.rs  id_interno.rs  id_simple.rs  mod.rs  version.rs
base/src/base/validadores/utilidades_globales/: imagen_validador.rs  mod.rs  normalizador_semantico.rs  severity.rs  space_cleaner.rs
