[package]
name = "base_vo"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
json = "0.12.4"
once_cell = "1.21.4"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
unicode-normalization = "0.1.25"
uuid = { version = "1.23.0", features = ["serde", "v4"] }
